[package]
name = "mkswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
page_size = "0.4.2"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
]

[dev-dependencies]
tempfile = "3.3.0"
hex-slice = "0.1.4"